--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-use-measure",
+  "name": "@elv1n/react-use-measure",
   "version": "2.0.3",
   "description": "measure view bounds",
   "main": "./dist/web.cjs.js",
@@ -35,6 +35,12 @@
     "measure",
     "bounds",
     "hooks"
+  ],
+  "files": [
+    "dist",
+    "types",
+    "readme.md",
+    "LICENSE"
   ],
   "author": "Paul Henschel",
   "contributors": [
