package is public

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
       "email": "info@erikverweij.com"
     }
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "peerDependencies": {
     "react": ">=16.13",
